Setting Integration Test up to fire on default.
Signed-off-by: Johannes Thönes <johannes.thoenes@googlemail.com>